<resources>
    <string name="app_name">LESAJA!</string>
    <string name="notelp">NOMOR TELEPON</string>
    <string name="sign_in">Masuk</string>
    <string name="masukkan_kode_4_digit_yang_terkirim_ke">Masukkan kode 4 digit yang terkirim ke:</string>
    <string name="Hasil">TextView</string>
    <string name="belum_punya_akun">Belum punya akun ?</string>
    <string name="daftar_sekarang">Daftar sekarang</string>
    <string name="masukkan_rincian_anda">Masukkan rincian Anda</string>
    <string name="hanya_anda_yang_dapat_melihatnya">Hanya Anda yang dapat melihatnya</string>
    <string name="nomor_ponsel">NOMOR PONSEL</string>
    <string name="nama">NAMA</string>
    <string name="email">EMAIL</string>
    <string name="selanjutnya">SELANJUTNYA</string>
    <string name="ubah_nomor">Ubah nomor</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="verifikasi">VERIFIKASI</string>
    <string name="elkana_hans">Elkana Hans</string>
    <string name="profil_saya">Profil Saya</string>
    <string name="saldo_transaksi"><![CDATA[Saldo & Transaksi]]></string>
    <string name="jadwal_les">Jadwal Les</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="bantuan">Bantuan</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="saldo">Saldo</string>
    <string name="rp_100_000">Rp 100.000,-</string>
    <string name="top_up">TOP UP</string>
    <string name="logo">LOGO</string>
    <string name="alamat">Alamat</string>
    <string name="todo">TODO</string>
    <string name="menu_bantuan">Bantuan</string>
    <string name="katalogguru">Katalog Guru</string>
    <string name="_62">(+62)</string>
    <string name="button">Button</string>
    <string name="_0">0</string>
    <string name="sd">SD</string>
    <string name="mata_pelajaran">Mata Pelajaran</string>
    <string name="smp">SMP</string>
    <string name="sma">SMA</string>
    <string name="ipa">IPA</string>
    <string name="matematika">Matematika</string>
    <string name="biologi">Biologi</string>
    <string name="inggris">Inggris</string>
    <string name="fisika">Fisika</string>
    <string name="bahasa">Bahasa</string>
    <string name="tik">TIK</string>
    <string name="ips">IPS</string>
    <string name="indonesia">Indonesia</string>
    <string name="kimia">Kimia</string>
    <string name="cari_guru">Cari Guru</string>
    <string name="hari_dan_tanggal">Hari dan Tanggal</string>
    <string name="jam">Jam</string>
    <string name="atur_jadwal_baru">Atur Jadwal Baru</string>
    <string name="logout">Logout</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="edit_profile">Edit Profile</string>
</resources>
