<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_saldotrx"
            android:icon="@drawable/icon"
            android:title="@string/saldo_transaksi" />
        <item
            android:id="@+id/nav_jadwalles"
            android:icon="@drawable/calendar"
            android:title="@string/jadwal_les" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ssettings"
            android:title="@string/pengaturan" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/hhelp"
            android:title="@string/bantuan"
        />
    </group>

</menu>
