<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.lesaja.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_jadwalles"
        android:name="com.example.lesaja.ui.jadwalles.JadwallesFragment"
        android:label="@string/jadwal_les"
        tools:layout="@layout/fragment_jadwalles" />

    <fragment
        android:id="@+id/nav_saldotrx"
        android:name="com.example.lesaja.ui.saldotrx.SaldotrxFragment"
        android:label="@string/saldo_transaksi"
        tools:layout="@layout/fragment_saldotrx" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.lesaja.ui.setting.SettingFragment"
        android:label="@string/pengaturan"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.lesaja.ui.help.HelpFragment"
        android:label="@string/bantuan"
        tools:layout="@layout/fragment_help" />
</navigation>