<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileEdit">

    <EditText
        android:id="@+id/Id"
        android:layout_width="315dp"
        android:layout_height="45dp"
        android:layout_marginBottom="44dp"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/textView49"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/idd"
        android:layout_width="284dp"
        android:layout_height="45dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="44dp"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/textView50"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/id2"
        android:layout_width="315dp"
        android:layout_height="45dp"
        android:layout_marginBottom="172dp"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <ImageButton
        android:id="@+id/imageButton20"
        android:layout_width="55dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/white"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/go_back_left_arrow"
        android:onClick="Balikk"/>

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/profil_saya"
        app:layout_constraintStart_toEndOf="@+id/imageButton20"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton25"
        android:layout_width="46dp"
        android:layout_height="41dp"
        android:layout_margin="25dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@android:color/white"
        android:contentDescription="@string/todo"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/yyes"
        android:onClick="saves"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/textView47"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        app:layout_constraintBottom_toTopOf="@+id/Id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomor_ponsel"
        app:layout_constraintBottom_toTopOf="@+id/idd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/id2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="77dp"
        android:layout_marginBottom="75dp"
        android:text="@string/_62"
        app:layout_constraintBottom_toTopOf="@+id/id2"
        app:layout_constraintEnd_toStartOf="@+id/idd"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Id" />
</androidx.constraintlayout.widget.ConstraintLayout>